--- a/.gitignore
+++ b/.gitignore
@@ -77,7 +77,7 @@ target/
 
 # exclude data from source control by default
 # /data/
-/nirvar/
+nirvar/
 
 # Mac OS-specific storage files
 .DS_Store
