--- a/requirements.txt
+++ b/requirements.txt
@@ -64,4 +64,4 @@ twine==5.0.0
 tzdata @ file:///croot/python-tzdata_1690578112552/work
 urllib3 @ file:///croot/urllib3_1707770551213/work
 wheel==0.41.2
-zipp==3.18.1
+zipp>=3.19.1
