--- a/models/FRED-MD/NIRVAR/backtesting_config.yaml
+++ b/models/FRED-MD/NIRVAR/backtesting_config.yaml
@@ -7,5 +7,5 @@ target_feature : 0
 SVD_niter : 7 
 SVD_random_state : 435 
 quantile : 1 #The top quantile stocks with the strongest predictions  
-embedding_method : 'Precision Matrix' #One of 'Pearson Correlation' (Default), 'Precision Matrix', 'Spearman Correlation', 'Kendall Correlation', 'Covariance Matrix"
+embedding_method : 'Pearson Correlation' #One of 'Pearson Correlation' (Default), 'Precision Matrix', 'Spearman Correlation', 'Kendall Correlation', 'Covariance Matrix"
 lookback_window : 480
