--- a/requirements.txt
+++ b/requirements.txt
@@ -1,67 +1,496 @@
-alabaster @ file:///home/ktietz/src/ci/alabaster_1611921544520/work
-Babel @ file:///work/perseverance-python-buildout/croot/babel_1698863996602/work
-Bottleneck @ file:///croot/bottleneck_1709069899917/work
-Brotli @ file:///work/perseverance-python-buildout/croot/brotli-split_1698805593785/work
-certifi @ file:///croot/certifi_1707229174982/work/certifi
-cffi==1.16.0
-charset-normalizer @ file:///tmp/build/80754af9/charset-normalizer_1630003229654/work
-colorama @ file:///work/perseverance-python-buildout/croot/colorama_1698847155966/work
-cryptography==42.0.5
-docutils @ file:///work/perseverance-python-buildout/croot/docutils_1698846509640/work
-idna @ file:///work/perseverance-python-buildout/croot/idna_1698845632828/work
-imagesize @ file:///work/perseverance-python-buildout/croot/imagesize_1698864514488/work
-importlib_metadata==7.1.0
-jaraco.classes==3.4.0
-jaraco.context==5.3.0
-jaraco.functools==4.0.1
-jeepney==0.8.0
-Jinja2 @ file:///work/perseverance-python-buildout/croot/jinja2_1707343043683/work
-joblib @ file:///croot/joblib_1713976767370/work
-keyring==25.1.0
-markdown-it-py==3.0.0
-MarkupSafe @ file:///work/perseverance-python-buildout/croot/markupsafe_1707342994941/work
-mdurl==0.1.2
-mkl-fft @ file:///work/perseverance-python-buildout/croot/mkl_fft_1698845673361/work
-mkl-random @ file:///work/perseverance-python-buildout/croot/mkl_random_1698845720894/work
-mkl-service==2.4.0
-more-itertools==10.2.0
-nh3==0.2.17
-nirvar @ file:///home/bm322/phd/projects/networks/NIRVAR/dist/nirvar-1.0.0-py3-none-any.whl#sha256=470ddbe424cbe4920558f278243ea017fbcc886cd64e5bbf083612b7483cf64a
-numexpr @ file:///work/perseverance-python-buildout/croot/numexpr_1698871031164/work
-numpy @ file:///croot/numpy_and_numpy_base_1708638617955/work/dist/numpy-1.26.4-cp312-cp312-linux_x86_64.whl#sha256=1d700f51d8b4fa684d858c9e3b56b1656bc5c82b6b79ff08d4e3b491c430059f
-packaging @ file:///croot/packaging_1710807400464/work
-pandas @ file:///croot/pandas_1709590491089/work/dist/pandas-2.2.1-cp312-cp312-linux_x86_64.whl#sha256=5802047a01a8af8f4a2d6aa0e3e9e6a659b7dcb47f027e62c94eab8c10d85ba7
-pkginfo==1.10.0
-plotly @ file:///work/perseverance-python-buildout/croot/plotly_1712350933756/work
-pycparser==2.22
-Pygments @ file:///work/perseverance-python-buildout/croot/pygments_1698846270603/work
-PySocks @ file:///work/perseverance-python-buildout/croot/pysocks_1698845478203/work
-python-dateutil @ file:///tmp/build/80754af9/python-dateutil_1626374649649/work
-pytz @ file:///croot/pytz_1713974312559/work
-readme_renderer==43.0
-requests @ file:///croot/requests_1707355572290/work
-requests-toolbelt==1.0.0
-rfc3986==2.0.0
-rich==13.7.1
-scikit-learn @ file:///work/perseverance-python-buildout/croot/scikit-learn_1698865753889/work
-scipy @ file:///croot/scipy_1710947333060/work/dist/scipy-1.12.0-cp312-cp312-linux_x86_64.whl#sha256=68ddf853c338a42d9bfea9e41f301327ac0c16ab685e3d12b6fc17bce5b92ab4
-SecretStorage==3.3.3
-setuptools==68.2.2
-six @ file:///tmp/build/80754af9/six_1644875935023/work
-snowballstemmer @ file:///tmp/build/80754af9/snowballstemmer_1637937080595/work
-Sphinx @ file:///work/perseverance-python-buildout/croot/sphinx_1698874522522/work
-sphinx-rtd-theme==2.0.0
-sphinxcontrib-applehelp @ file:///home/ktietz/src/ci/sphinxcontrib-applehelp_1611920841464/work
-sphinxcontrib-devhelp @ file:///home/ktietz/src/ci/sphinxcontrib-devhelp_1611920923094/work
-sphinxcontrib-htmlhelp @ file:///tmp/build/80754af9/sphinxcontrib-htmlhelp_1623945626792/work
-sphinxcontrib-jquery==4.1
-sphinxcontrib-jsmath @ file:///home/ktietz/src/ci/sphinxcontrib-jsmath_1611920942228/work
-sphinxcontrib-qthelp @ file:///home/ktietz/src/ci/sphinxcontrib-qthelp_1611921055322/work
-sphinxcontrib-serializinghtml @ file:///tmp/build/80754af9/sphinxcontrib-serializinghtml_1624451540180/work
-tenacity @ file:///work/perseverance-python-buildout/croot/tenacity_1698863691366/work
-threadpoolctl @ file:///Users/ktietz/demo/mc3/conda-bld/threadpoolctl_1629802263681/work
-twine==5.0.0
-tzdata @ file:///croot/python-tzdata_1690578112552/work
-urllib3 @ file:///croot/urllib3_1707770551213/work
-wheel==0.41.2
-zipp>=3.19.1
+# This file may be used to create an environment using:
+# $ conda create --name <env> --file <this file>
+# platform: linux-64
+_libgcc_mutex=0.1=main
+_openmp_mutex=5.1=1_gnu
+_r-mutex=1.0.0=anacondar_1
+_sysroot_linux-64_curr_repodata_hack=3=haa98f57_10
+alabaster=0.7.16=pyhd8ed1ab_0
+alsa-lib=1.2.6.1=h7f98852_0
+anyio=3.5.0=py311h06a4308_0
+argon2-cffi=21.3.0=pyhd3eb1b0_0
+argon2-cffi-bindings=21.2.0=py311h5eee18b_0
+arrow=1.2.3=pypi_0
+asttokens=2.0.5=pyhd3eb1b0_0
+async-lru=2.0.4=py311h06a4308_0
+attr=2.5.1=h166bdaf_0
+attrs=23.1.0=py311h06a4308_0
+babel=2.11.0=py311h06a4308_0
+backcall=0.2.0=pyhd3eb1b0_0
+backports=1.1=pyhd3eb1b0_0
+backports.functools_lru_cache=1.6.4=pyhd3eb1b0_0
+beautifulsoup4=4.12.2=py311h06a4308_0
+binaryornot=0.4.4=pypi_0
+binutils_impl_linux-64=2.38=h2a08ee3_1
+binutils_linux-64=2.38.0=hc2dff05_0
+blas=1.0=openblas
+bleach=4.1.0=pyhd3eb1b0_0
+boost-cpp=1.82.0=hdb19cb5_2
+bottleneck=1.3.7=py311hf4808d0_0
+brotli=1.0.9=h5eee18b_8
+brotli-bin=1.0.9=h5eee18b_8
+brotli-python=1.0.9=py311h6a678d5_7
+bwidget=1.9.11=1
+bzip2=1.0.8=h7b6447c_0
+c-ares=1.19.1=h5eee18b_0
+ca-certificates=2023.11.17=hbcca054_0
+cairo=1.16.0=hb05425b_5
+certifi=2023.5.7=pypi_0
+cffi=1.16.0=py311h5eee18b_0
+chardet=5.1.0=pypi_0
+charset-normalizer=3.1.0=pypi_0
+click=8.1.3=pypi_0
+colorama=0.4.6=pyhd8ed1ab_0
+comm=0.1.2=py311h06a4308_0
+contourpy=1.0.7=pypi_0
+cookiecutter=2.1.1=pypi_0
+cryptography=41.0.3=py311hdda0065_0
+curl=8.4.0=hdbd6064_0
+cycler=0.11.0=pyhd3eb1b0_0
+dbus=1.13.18=hb2f20db_0
+debugpy=1.6.7=py311h6a678d5_0
+decorator=5.1.1=pyhd3eb1b0_0
+defusedxml=0.7.1=pyhd3eb1b0_0
+docutils=0.21.2=pyhd8ed1ab_0
+executing=0.8.3=pyhd3eb1b0_0
+expat=2.5.0=h6a678d5_0
+fastjsonschema=2.17.1=pypi_0
+font-ttf-dejavu-sans-mono=2.37=hd3eb1b0_0
+font-ttf-inconsolata=2.001=hcb22688_0
+font-ttf-source-code-pro=2.030=hd3eb1b0_0
+font-ttf-ubuntu=0.83=h8b1ccd4_0
+fontconfig=2.14.1=h4c34cd2_2
+fonts-anaconda=1=h8fa9717_0
+fonts-conda-ecosystem=1=hd3eb1b0_0
+fonttools=4.39.4=pypi_0
+freetype=2.12.1=h4a9f257_0
+fribidi=1.0.10=h7b6447c_0
+future=0.18.3=pypi_0
+gcc_impl_linux-64=11.2.0=h1234567_1
+gcc_linux-64=11.2.0=h5c386dc_0
+gettext=0.19.8.1=h73d1719_1008
+gfortran_impl_linux-64=11.2.0=h1234567_1
+gfortran_linux-64=11.2.0=hc2dff05_0
+gh=2.25.1=ha8f183a_0
+glib=2.69.1=he621ea3_2
+graphite2=1.3.14=h295c915_1
+greenlet=3.0.1=pypi_0
+gsl=2.7.1=h6e86dc7_1
+gst-plugins-base=1.14.1=h6a678d5_1
+gstreamer=1.14.1=h5eee18b_1
+gxx_impl_linux-64=11.2.0=h1234567_1
+gxx_linux-64=11.2.0=hc2dff05_0
+h2=4.1.0=pyhd8ed1ab_0
+harfbuzz=4.3.0=hf52aaf7_2
+hpack=4.0.0=pyh9f0ad1d_0
+hyperframe=6.0.1=pyhd8ed1ab_0
+icu=73.1=h6a678d5_0
+idna=3.4=py311h06a4308_0
+imagesize=1.4.1=pyhd8ed1ab_0
+importlib-metadata=6.0.0=py311h06a4308_0
+importlib_metadata=6.0.0=hd3eb1b0_0
+importlib_resources=6.4.0=pyhd8ed1ab_0
+intel-openmp=2023.1.0=hdb19cb5_46306
+ipykernel=6.25.0=py311h92b7b1e_0
+ipython=8.15.0=py311h06a4308_0
+jedi=0.18.1=py311h06a4308_1
+jinja2=3.1.2=py311h06a4308_0
+jinja2-time=0.2.0=pypi_0
+joblib=1.2.0=pypi_0
+jpeg=9e=h5eee18b_1
+json5=0.9.6=pyhd3eb1b0_0
+jsonschema=4.17.3=pypi_0
+jsonschema-specifications=2023.7.1=py311h06a4308_0
+jupyter-lsp=2.2.0=py311h06a4308_0
+jupyter_client=8.6.0=py311h06a4308_0
+jupyter_core=5.5.0=py311h06a4308_0
+jupyter_events=0.8.0=py311h06a4308_0
+jupyter_server=2.10.0=py311h06a4308_0
+jupyter_server_terminals=0.4.4=py311h06a4308_1
+jupyterlab=4.0.8=py311h06a4308_0
+jupyterlab_pygments=0.1.2=py_0
+jupyterlab_server=2.25.1=py311h06a4308_0
+kaleido=0.2.1=pypi_0
+kernel-headers_linux-64=3.10.0=h57e8cba_10
+keyutils=1.6.1=h166bdaf_0
+kiwisolver=1.4.4=py311h6a678d5_0
+krb5=1.20.1=h143b758_1
+lame=3.100=h7b6447c_0
+lazy-loader=0.2=pypi_0
+lcms2=2.12=h3be6417_0
+ld_impl_linux-64=2.38=h1181459_1
+lerc=3.0=h295c915_0
+libblas=3.9.0=16_linux64_openblas
+libboost=1.82.0=h109eef0_2
+libbrotlicommon=1.0.9=h5eee18b_8
+libbrotlidec=1.0.9=h5eee18b_8
+libbrotlienc=1.0.9=h5eee18b_8
+libcap=2.64=ha37c62d_0
+libclang=14.0.6=default_hc6dbbc7_1
+libclang13=14.0.6=default_he11475f_1
+libcups=2.4.2=h2d74bed_1
+libcurl=8.4.0=h251f7ec_0
+libdeflate=1.17=h5eee18b_1
+libedit=3.1.20221030=h5eee18b_0
+libev=4.33=h7f8727e_1
+libevent=2.1.12=hdbd6064_1
+libffi=3.4.4=h6a678d5_0
+libflac=1.3.4=h27087fc_0
+libgcc-devel_linux-64=11.2.0=h1234567_1
+libgcc-ng=11.2.0=h1234567_1
+libgcrypt=1.10.1=h166bdaf_0
+libgfortran=3.0.0=1
+libgfortran-ng=11.2.0=h00389a5_1
+libgfortran5=11.2.0=h1234567_1
+libgomp=11.2.0=h1234567_1
+libgpg-error=1.45=hc0c96e0_0
+libiconv=1.16=h7f8727e_2
+libjpeg-turbo=2.1.1=h7f98852_0
+liblapack=3.9.0=16_linux64_openblas
+libllvm14=14.0.6=hdb19cb5_3
+libnghttp2=1.57.0=h2d74bed_0
+libnsl=2.0.0=h7f98852_0
+libogg=1.3.5=h27cfd23_1
+libopenblas=0.3.21=h043d6bf_0
+libopus=1.3.1=h7b6447c_0
+libpng=1.6.39=h5eee18b_0
+libpq=12.17=hdbd6064_0
+libsndfile=1.0.31=h9c3ff4c_1
+libsodium=1.0.18=h7b6447c_0
+libssh2=1.10.0=hdbd6064_2
+libstdcxx-devel_linux-64=11.2.0=h1234567_1
+libstdcxx-ng=11.2.0=h1234567_1
+libsystemd0=249=h424bc38_2
+libtiff=4.5.1=h6a678d5_0
+libuuid=1.41.5=h5eee18b_0
+libvorbis=1.3.7=h7b6447c_0
+libwebp-base=1.3.2=h5eee18b_0
+libxcb=1.15=h7f8727e_0
+libxcrypt=4.4.28=h166bdaf_0
+libxkbcommon=1.0.3=he3ba5ed_0
+libxml2=2.10.4=hf1b16e4_1
+littleutils=0.2.2=pypi_0
+llvm-openmp=12.0.1=h4bd325d_1
+lz4-c=1.9.4=h6a678d5_0
+make=4.2.1=h1bed415_1
+markupsafe=2.1.2=pypi_0
+matplotlib=3.7.1=pypi_0
+matplotlib-inline=0.1.6=py311h06a4308_0
+memory_profiler=0.58.0=pyhd3eb1b0_0
+mistune=2.0.4=py311h06a4308_0
+mkl=2023.1.0=h213fc3f_46344
+mkl-service=2.4.0=py311h5eee18b_1
+mpg123=1.29.3=h27087fc_0
+mysql=5.7.20=hf484d3e_1001
+mysql-common=8.0.29=h26416b9_1
+nbclient=0.8.0=py311h06a4308_0
+nbconvert=7.10.0=py311h06a4308_0
+nbformat=5.8.0=pypi_0
+ncurses=6.4=h6a678d5_0
+nest-asyncio=1.5.6=py311h06a4308_0
+networkx=3.1=pypi_0
+nirvar=1.1.0=dev_0
+notebook=7.0.6=py311h06a4308_0
+notebook-shim=0.2.3=py311h06a4308_0
+nspr=4.35=h6a678d5_0
+nss=3.89.1=h6a678d5_0
+numexpr=2.8.7=py311h812550d_0
+numpy=1.24.3=pypi_0
+numpy-indexed=0.3.7=pypi_0
+openblas=0.3.4=ha44fe06_0
+openjpeg=2.4.0=h3ad879b_0
+openssl=3.0.12=h7f8727e_0
+outdated=0.2.2=pypi_0
+overrides=7.4.0=py311h06a4308_0
+packaging=23.1=py311h06a4308_0
+pandas=2.0.1=pypi_0
+pandas-flavor=0.5.0=pypi_0
+pandasql=0.7.3=pypi_0
+pandoc=2.12=h06a4308_3
+pandocfilters=1.5.0=pyhd3eb1b0_0
+pango=1.50.7=h05da053_0
+parso=0.8.3=pyhd3eb1b0_0
+patsy=0.5.3=pypi_0
+pcre=8.45=h295c915_0
+pcre2=10.42=hebb0a14_0
+pexpect=4.8.0=pyhd3eb1b0_3
+pickleshare=0.7.5=pyhd3eb1b0_1003
+pillow=9.5.0=pypi_0
+pingouin=0.5.3=pypi_0
+pip=23.2.1=pypi_0
+pixman=0.40.0=h7f8727e_1
+pkgutil-resolve-name=1.3.10=pyhd8ed1ab_1
+platformdirs=3.10.0=py311h06a4308_0
+plotly=5.14.1=pypi_0
+ply=3.11=pyhd8ed1ab_2
+poppler=22.12.0=h9614445_3
+poppler-data=0.4.11=h06a4308_1
+prometheus_client=0.14.1=py311h06a4308_0
+prompt-toolkit=3.0.36=py311h06a4308_0
+prompt_toolkit=3.0.36=hd3eb1b0_0
+psutil=5.9.0=py311h5eee18b_0
+pthread-stubs=0.3=h0ce48e5_1
+ptyprocess=0.7.0=pyhd3eb1b0_2
+pure_eval=0.2.2=pyhd3eb1b0_0
+pybind11-abi=4=hd8ed1ab_3
+pycparser=2.21=pyhd3eb1b0_0
+pygments=2.15.1=py311h06a4308_1
+pyopenssl=23.2.0=py311h06a4308_0
+pyparsing=3.0.9=pyhd8ed1ab_0
+pyqt=5.15.10=py311h6a678d5_0
+pyqt5-sip=12.13.0=py311h5eee18b_0
+pyrsistent=0.19.3=pypi_0
+pysocks=1.7.1=py311h06a4308_0
+python=3.11.5=h955ad1f_0
+python-dateutil=2.8.2=pyhd3eb1b0_0
+python-json-logger=2.0.7=py311h06a4308_0
+python-slugify=8.0.1=pypi_0
+python-tzdata=2023.3=pyhd3eb1b0_0
+python_abi=3.11=2_cp311
+pytz=2023.3=pypi_0
+pyyaml=6.0=pypi_0
+pyzmq=25.1.0=py311h6a678d5_0
+qhull=2020.2=hdb19cb5_2
+qt-main=5.15.2=h53bd1ea_10
+r-askpass=1.2.0=r43h76d94ec_0
+r-backports=1.4.1=r43h76d94ec_0
+r-base=4.3.1=h1ae530e_0
+r-base64enc=0.1_3=r43h76d94ec_4
+r-bit=4.0.5=r43h76d94ec_0
+r-bit64=4.0.5=r43h76d94ec_0
+r-blob=1.2.4=r43h6115d3f_0
+r-boot=1.3_28.1=r43h6115d3f_0
+r-broom=1.0.5=r43h6115d3f_0
+r-bslib=0.5.1=r43h6115d3f_0
+r-cachem=1.0.8=r43h76d94ec_0
+r-callr=3.7.3=r43h6115d3f_0
+r-caret=6.0_94=r43h76d94ec_0
+r-cellranger=1.1.0=r43h6115d3f_0
+r-class=7.3_22=r43h76d94ec_0
+r-cli=3.6.1=r43h884c59f_0
+r-clipr=0.8.0=r43h6115d3f_0
+r-clock=0.7.0=r43h884c59f_0
+r-cluster=2.1.4=r43h640688f_0
+r-codetools=0.2_19=r43h6115d3f_0
+r-colorspace=2.1_0=r43h76d94ec_0
+r-commonmark=1.9.0=r43h76d94ec_0
+r-conflicted=1.2.0=r43h142f84f_0
+r-cpp11=0.4.6=r43h6115d3f_0
+r-crayon=1.5.2=r43h6115d3f_0
+r-curl=5.1.0=r43h76d94ec_0
+r-data.table=1.14.8=r43h76d94ec_0
+r-dbi=1.1.3=r43h6115d3f_0
+r-dbplyr=2.3.4=r43h6115d3f_0
+r-diagram=1.6.5=r43h6115d3f_0
+r-digest=0.6.33=r43h884c59f_0
+r-dplyr=1.1.3=r43h884c59f_0
+r-dtplyr=1.3.1=r43h6115d3f_0
+r-e1071=1.7_13=r43h884c59f_0
+r-ellipsis=0.3.2=r43h76d94ec_0
+r-essentials=4.3.1=r43_0
+r-evaluate=0.22=r43h6115d3f_0
+r-fansi=1.0.5=r43h76d94ec_0
+r-farver=2.1.1=r43h884c59f_0
+r-fastmap=1.1.1=r43h884c59f_0
+r-fontawesome=0.5.2=r43h6115d3f_0
+r-forcats=1.0.0=r43h6115d3f_0
+r-foreach=1.5.2=r43h6115d3f_0
+r-foreign=0.8_85=r43h76d94ec_0
+r-formatr=1.14=r43h6115d3f_0
+r-fs=1.6.3=r43h884c59f_0
+r-future=1.33.0=r43h6115d3f_0
+r-future.apply=1.11.0=r43h6115d3f_0
+r-gargle=1.5.2=r43h142f84f_0
+r-generics=0.1.3=r43h142f84f_0
+r-ggplot2=3.4.4=r43h6115d3f_0
+r-glmnet=4.1_8=r43hb5eb8f6_0
+r-globals=0.16.2=r43h142f84f_0
+r-glue=1.6.2=r43h76d94ec_0
+r-googledrive=2.1.1=r43h6115d3f_0
+r-googlesheets4=1.1.1=r43h6115d3f_0
+r-gower=1.0.1=r43h76d94ec_0
+r-gtable=0.3.4=r43h6115d3f_0
+r-hardhat=1.3.0=r43h6115d3f_0
+r-haven=2.5.3=r43h884c59f_0
+r-highr=0.10=r43h6115d3f_0
+r-hms=1.1.3=r43h6115d3f_0
+r-htmltools=0.5.6.1=r43h76d94ec_0
+r-httpuv=1.6.11=r43h884c59f_0
+r-httr=1.4.7=r43h6115d3f_0
+r-ids=1.0.1=r43h142f84f_0
+r-ipred=0.9_14=r43h76d94ec_0
+r-irdisplay=1.1=r43h6115d3f_0
+r-irkernel=1.3.2=r43_0
+r-isoband=0.2.7=r43h884c59f_0
+r-iterators=1.0.14=r43h6115d3f_0
+r-jquerylib=0.1.4=r43h6115d3f_0
+r-jsonlite=1.8.7=r43h76d94ec_0
+r-kernsmooth=2.23_22=r43h640688f_0
+r-knitr=1.44=r43h6115d3f_0
+r-labeling=0.4.3=r43h6115d3f_0
+r-later=1.3.1=r43h884c59f_0
+r-lattice=0.22_5=r43h76d94ec_0
+r-lava=1.7.2.1=r43h6115d3f_0
+r-lifecycle=1.0.3=r43h142f84f_0
+r-listenv=0.9.0=r43h142f84f_0
+r-lubridate=1.9.3=r43h76d94ec_0
+r-magrittr=2.0.3=r43h76d94ec_0
+r-mass=7.3_60=r43h76d94ec_0
+r-matrix=1.6_1.1=r43h76d94ec_0
+r-memoise=2.0.1=r43h6115d3f_0
+r-mgcv=1.9_0=r43h76d94ec_0
+r-mime=0.12=r43h76d94ec_0
+r-modelmetrics=1.2.2.2=r43h884c59f_0
+r-modelr=0.1.11=r43h6115d3f_0
+r-munsell=0.5.0=r43h6115d3f_0
+r-nlme=3.1_163=r43h640688f_0
+r-nnet=7.3_19=r43h76d94ec_0
+r-numderiv=2016.8_1.1=r43h6115d3f_0
+r-openssl=2.1.1=r43h76d94ec_0
+r-parallelly=1.36.0=r43h6115d3f_0
+r-pbdzmq=0.3_10=r43h884c59f_0
+r-pillar=1.9.0=r43h6115d3f_0
+r-pkgconfig=2.0.3=r43h6115d3f_0
+r-plyr=1.8.9=r43h884c59f_0
+r-prettyunits=1.2.0=r43h142f84f_0
+r-proc=1.18.4=r43h884c59f_0
+r-processx=3.8.2=r43h76d94ec_0
+r-prodlim=2023.08.28=r43h884c59f_0
+r-progress=1.2.2=r43h142f84f_0
+r-progressr=0.14.0=r43h6115d3f_0
+r-promises=1.2.1=r43h884c59f_0
+r-proxy=0.4_27=r43h76d94ec_0
+r-ps=1.7.5=r43h76d94ec_0
+r-purrr=1.0.2=r43h76d94ec_0
+r-quantmod=0.4.25=r43h6115d3f_0
+r-r6=2.5.1=r43h6115d3f_0
+r-ragg=1.2.6=r43h884c59f_0
+r-randomforest=4.7_1.1=r43h640688f_0
+r-rappdirs=0.3.3=r43h76d94ec_0
+r-rcolorbrewer=1.1_3=r43h6115d3f_1
+r-rcpp=1.0.11=r43h884c59f_0
+r-rcppeigen=0.3.3.9.3=r43h884c59f_0
+r-readr=2.1.4=r43h884c59f_0
+r-readxl=1.4.3=r43h884c59f_0
+r-recipes=1.0.8=r43h6115d3f_0
+r-recommended=4.3.1=r43_0
+r-rematch=2.0.0=r43h6115d3f_0
+r-rematch2=2.1.2=r43h142f84f_0
+r-repr=1.1.6=r43h6115d3f_0
+r-reprex=2.0.2=r43h6115d3f_0
+r-reshape2=1.4.4=r43h884c59f_0
+r-rlang=1.1.1=r43h884c59f_0
+r-rmarkdown=2.25=r43h6115d3f_0
+r-rpart=4.1.21=r43h76d94ec_0
+r-rstudioapi=0.15.0=r43h6115d3f_0
+r-rvest=1.0.3=r43h6115d3f_0
+r-sass=0.4.7=r43h884c59f_0
+r-scales=1.2.1=r43h6115d3f_0
+r-selectr=0.4_2=r43h6115d3f_0
+r-shape=1.4.6=r43h142f84f_0
+r-shiny=1.7.5.1=r43h6115d3f_0
+r-sourcetools=0.1.7_1=r43h884c59f_0
+r-spatial=7.3_17=r43h76d94ec_0
+r-squarem=2021.1=r43h142f84f_0
+r-stringi=1.7.12=r43h884c59f_0
+r-stringr=1.5.0=r43h6115d3f_0
+r-survival=3.5_7=r43h76d94ec_0
+r-sys=3.4.2=r43h76d94ec_0
+r-systemfonts=1.0.5=r43h884c59f_0
+r-textshaping=0.3.7=r43h884c59f_0
+r-tibble=3.2.1=r43h76d94ec_0
+r-tidyr=1.3.0=r43h884c59f_0
+r-tidyselect=1.2.0=r43h6115d3f_0
+r-tidyverse=2.0.0=r43h6115d3f_0
+r-timechange=0.2.0=r43h884c59f_0
+r-timedate=4022.108=r43h6115d3f_0
+r-tinytex=0.48=r43h142f84f_0
+r-ttr=0.24.3=r43h76d94ec_0
+r-tzdb=0.4.0=r43h884c59f_0
+r-utf8=1.2.4=r43h76d94ec_0
+r-uuid=1.1_1=r43h76d94ec_0
+r-vctrs=0.6.4=r43h884c59f_0
+r-viridislite=0.4.2=r43h6115d3f_0
+r-vroom=1.6.4=r43h884c59f_0
+r-withr=2.5.1=r43h6115d3f_0
+r-xfun=0.40=r43h76d94ec_0
+r-xml2=1.3.5=r43h884c59f_0
+r-xtable=1.8_4=r43h6115d3f_0
+r-xts=0.13.1=r43h76d94ec_0
+r-yaml=2.3.7=r43h76d94ec_0
+r-zoo=1.8_12=r43h76d94ec_0
+readline=8.2=h5eee18b_0
+referencing=0.30.2=py311h06a4308_0
+requests=2.30.0=pypi_0
+rfc3339-validator=0.1.4=py311h06a4308_0
+rfc3986-validator=0.1.1=py311h06a4308_0
+rpds-py=0.10.6=py311hb02cf49_0
+scikit-learn=1.2.2=pypi_0
+scikit-rmt=0.6.0=pypi_0
+scipy=1.9.3=pypi_0
+screenot=0.0.1=pypi_0
+seaborn=0.12.2=pypi_0
+sed=4.8=h7b6447c_0
+send2trash=1.8.2=py311h06a4308_0
+setuptools=68.0.0=py311h06a4308_0
+sip=6.7.12=py311h6a678d5_0
+six=1.16.0=pyhd3eb1b0_1
+sniffio=1.2.0=py311h06a4308_1
+snowballstemmer=2.2.0=pyhd3eb1b0_0
+soupsieve=2.5=py311h06a4308_0
+sphinx=7.3.7=pyhd8ed1ab_0
+sphinxcontrib-applehelp=1.0.2=pyhd3eb1b0_0
+sphinxcontrib-devhelp=1.0.2=pyhd3eb1b0_0
+sphinxcontrib-htmlhelp=2.0.0=pyhd3eb1b0_0
+sphinxcontrib-jsmath=1.0.1=pyhd3eb1b0_0
+sphinxcontrib-qthelp=1.0.3=pyhd3eb1b0_0
+sphinxcontrib-serializinghtml=1.1.10=pyhd8ed1ab_0
+sqlalchemy=2.0.23=pypi_0
+sqlite=3.41.2=h5eee18b_0
+stack_data=0.2.0=pyhd3eb1b0_0
+statsmodels=0.14.0=pypi_0
+sysroot_linux-64=2.17=h57e8cba_10
+tabulate=0.9.0=pypi_0
+tbb=2021.8.0=hdb19cb5_0
+tenacity=8.2.2=pypi_0
+terminado=0.17.1=py311h06a4308_0
+text-unidecode=1.3=pypi_0
+threadpoolctl=3.1.0=pypi_0
+tinycss2=1.2.1=py311h06a4308_0
+tk=8.6.12=h1ccaba5_0
+tktable=2.10=h14c3975_0
+tomli=2.0.1=pyhd8ed1ab_0
+tornado=6.3.3=py311h5eee18b_0
+traitlets=5.7.1=py311h06a4308_0
+typing-extensions=4.7.1=py311h06a4308_0
+typing_extensions=4.7.1=py311h06a4308_0
+tzdata=2024a=h04d1e81_0
+unicodedata2=15.1.0=py311h5eee18b_0
+urllib3=2.0.2=pypi_0
+wcwidth=0.2.5=pyhd3eb1b0_0
+webencodings=0.5.1=py311h06a4308_1
+websocket-client=0.58.0=py311h06a4308_4
+wheel=0.41.2=py311h06a4308_0
+xarray=2023.5.0=pypi_0
+xcb-util=0.4.0=h516909a_0
+xcb-util-keysyms=0.4.0=h516909a_0
+xcb-util-wm=0.4.1=h516909a_0
+xkeyboard-config=2.31=h516909a_0
+xorg-kbproto=1.0.7=h7f98852_1002
+xorg-libice=1.0.10=h7f98852_0
+xorg-libx11=1.7.2=h7f98852_0
+xorg-libxau=1.0.9=h7f98852_0
+xorg-libxdmcp=1.1.3=h7f98852_0
+xorg-libxext=1.3.4=h7f98852_1
+xorg-libxrender=0.9.10=h7f98852_1003
+xorg-renderproto=0.11.1=h7f98852_1002
+xorg-xextproto=7.3.0=h7f98852_1002
+xorg-xf86vidmodeproto=2.3.1=h7f98852_1002
+xorg-xproto=7.0.31=h27cfd23_1007
+xz=5.4.2=h5eee18b_0
+yaml=0.2.5=h7b6447c_0
+zeromq=4.3.4=h2531618_0
+zipp=3.11.0=py311h06a4308_0
+zlib=1.2.13=h5eee18b_0
+zstandard=0.22.0=py311h2c38b39_0
+zstd=1.5.5=hc292b87_0
